pkg/testdata/TestPatchVirtualService/use-cases/Append-item-to-named-object-list.patch.json
{
  "spec": {
    "http": [
      {
        "name": "additional-route",
        "timeout": "5s",
        "retries": {
          "attempts": 3
        },
        "route": [
          {
            "destination": {
              "host": "additional.my.service.prod.mesh.io"
            }
          }
        ]
      }
    ]
  }
}
