pkg/testdata/TestPatchVirtualService/use-cases/Append-item-to-unnamed-object-list.patch.json
{
  "spec": {
    "http": [
      {
        "match": [
          {
            "port": 321
          }
        ],
        "route": [
          {
            "destination": {
              "host": "another-destination.mesh.io"
            }
          }
        ]
      }
    ]
  }
}
