pkg/testdata/TestPatchVirtualService/use-cases/Apply-item-to-unnamed-object-list-fail.patch.json
{
  "spec": {
    "tcp": [
      {
        "timeout": "3ms"
      }
    ]
  }
}
