pkg/testdata/TestPatchVirtualService/use-cases/Apply-overlay-with-bad-port.patch.json
{
  "spec": {
    "http": [
      {
        "match": [
          {
            "port": "iiii123"
          }
        ]
      }
    ]
  }
}
