pkg/testdata/TestPatchVirtualService/use-cases/base-object-with-delegate.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-vs
  namespace: default
spec:
  gateways:
  - mesh
  hosts:
  - my.service.cluster.local
  - my.service.mesh.io
  http:
  - delegate:
      name: test1-123
      namespace: default
    match:
    - port: 123
    name: http-123
