pkg/testdata/TestPatchVirtualService/use-cases/Delete-item-in-named-object-list-by-port.patch.json
{
  "spec": {
    "http": [
      {
        "match": [
          {
            "port": 123
          }
        ],
        "$patch": "delete"
      }
    ]
  }
}
