pkg/testdata/TestPatchVirtualService/use-cases/Delete-item-in-named-object-list.patch.json
{
  "spec": {
    "http": [
      {
        "name": "default",
        "$patch": "delete"
      }
    ]
  }
}
