pkg/testdata/TestPatchVirtualService/use-cases/Delete-item-in-primitives-list.patch.json
{
  "spec": {
    "$deleteFromPrimitiveList/hosts": [
        "my.service.mesh.io"
    ]
  }
}
