pkg/testdata/TestPatchVirtualService/use-cases/Match-by-name.patch.json
{
  "spec": {
    "http": [
      {
        "match": [
          {
            "port": 123
          }
        ],
        "name": "default",
        "timeout": "3s"
      }
    ]
  }
}
