pkg/testdata/TestPatchVirtualService/use-cases/Match-multiple-route-types-fail-tcp.patch.json
{
  "spec": {
    "tcp": [
      {
        "match": [
          {
            "port": 999
          }
        ],
        "timeout": "3s"
      }
    ],
    "http": [
      {
        "match": [
          {
            "port": 123
          }
        ],
        "timeout": "3s"
      }
    ]
  }
}
