pkg/testdata/TestPatchVirtualService/use-cases/Match-multiple-route-types.patch.json
{
  "spec": {
    "tcp": [
      {
        "match": [
          {
            "port": 333
          }
        ],
        "timeout": "3s"
      }
    ]
  }
}
