pkg/testdata/TestPatchVirtualService/use-cases/Match-multiple-routes-mixed.patch.json
{
  "spec": {
    "http": [
      {
        "match": [
          {
            "port": 123
          }
        ],
        "timeout": "3s"
      },
      {
        "name": "http-333",
        "timeout": "7s"
      }
    ]
  }
}
