pkg/testdata/TestPatchVirtualService/use-cases/Match-multiple-routes-name.patch.json
{
  "spec": {
    "http": [
      {
        "name": "http-123",
        "match": [
          {
            "port": 123
          }
        ],
        "timeout": "3s"
      }
    ]
  }
}
