pkg/testdata/TestPatchVirtualService/use-cases/Match-multiple-routes-port-fail.patch.json
{
  "spec": {
    "http": [
      {
        "match": [
          {
            "port": 123
          }
        ],
        "timeout": "3s"
      },
      {
        "match": [
          {
            "port": 999
          }
        ],
        "timeout": "9s"
      }
    ]
  }
}
