pkg/testdata/TestPatchVirtualService/use-cases/Match-multiple-routes.patch.json
{
  "spec": {
    "http": [
      {
        "match": [
          {
            "port": 123
          }
        ],
        "timeout": "3s"
      }
    ],
    "tcp": [
      {
        "match": [
          {
            "port": 333
          }
        ],
        "timeout": "4s"
      }
    ]
  }
}
