pkg/testdata/TestPatchVirtualService/use-cases/multiple-route-types-base-object.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-vs
  namespace: default
spec:
  gateways:
  - mesh
  hosts:
  - my.service.cluster.local
  - my.service.mesh.io
  http:
  - match:
    - port: 123
    name: default
    retries:
      attempts: 5
    route:
    - destination:
        host: my.service.prod.mesh.io
  tcp:
  - match:
    - port: 333
    name: default
    retries:
      attempts: 5
    route:
    - destination:
        host: another.service.prod.mesh.io
