pkg/testdata/TestPatchVirtualService/use-cases/multiple-routes-base-object.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-vs
  namespace: default
spec:
  gateways:
  - mesh
  hosts:
  - my.service.cluster.local
  - my.service.mesh.io
  http:
  - name: http-123
    match:
    - port: 123
    retries:
      attempts: 5
    route:
    - destination:
        host: my.service.prod.mesh.io
  - name: http-333
    match:
    - port: 333
    retries:
      attempts: 5
    route:
      - destination:
          host: another.service.prod.mesh.io
