pkg/testdata/TestPatchVirtualService/use-cases/Replace-item-in-primitives-list.patch.json
{
  "spec": {
    "$deleteFromPrimitiveList/hosts": [
        "my.service.mesh.io"
    ],
    "hosts": [
        "additional.host.my.sevice.mesh.io"
    ]
  }
}
