pkg/testdata/TestPatchVirtualService/use-cases/Route-patch-causing-reordering.patch.json
{
  "spec": {
    "http": [
      {
        "name": "route-in-position-1",
        "retries": {
          "attempts": 3
        }
      }
    ]
  }
}
