pkg/testdata/TestPatchVirtualService/use-cases/vs-route-replace-strategy.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bg_test_green
  namespace: default
spec:
  gateways:
    - mesh
  hosts:
    - my.service.cluster.local
    - my.service.mesh.io
  http:
    - name: bg_test_green
      match:
        - port: 7442
      retries:
        attempts: 5
      route:
        - destination:
            host: my.service.prod.mesh.io
