pkg/testdata/TestPatchVirtualService/use-cases/vs-with-routes-reordering.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-vs
  namespace: default
spec:
  gateways:
    - mesh
  hosts:
    - my.service.cluster.local
    - my.service.mesh.io
  http:
    - name: route-in-position-0
      match:
        - port: 123
      retries:
        attempts: 5
      route:
        - destination:
            host: my.service.prod.mesh.io
    - name: route-in-position-1
      match:
        - port: 333
      retries:
        attempts: 5
      route:
        - destination:
            host: another.service.prod.mesh.io
    - match:
        - port: 8080
      retries:
        attempts: 5
    - match:
        - port: 9090
      retries:
        attempts: 5
